# neural_nets_work

./: REAME.md
cpp/: CMakeLists.txt
cpp/include/: NeuralNet.hpp  NeuralNetClassifier.hpp  Neuron.hpp  NeuronLayer.hpp  matplotlibcpp.h
cpp/src/: NeuralNet.cpp  Neuron.cpp  a.out  main.cpp
matplotlib-cpp-master/: matplotlibcpp.h
matplotlib-cpp-master/examples/: animation  bar  basic  fill  fill_inbetween  imshow  minimal  modern  nonblock  quiver  sample  surface  update  xkcd
python/: .simple_classification2.py.swp  classification2_data.txt  simple_classification1.py  simple_classification2.py  simple_classification3.py
